artifacts/f0-baseline-2026-03-22/logs/05-typecheck-core.log
 WARN  Unsupported engine: wanted: {"node":">=24 <25"} (current: {"node":"v22.21.1","pnpm":"9.1.0"})

> birthub-360@1.0.0 typecheck:core /workspace/PROJETO-FINAL-BIRTHUB-360-INNOVATION
> node scripts/ci/run-pnpm.mjs -r --if-present --filter=@birthub/web... --filter=@birthub/api... --filter=@birthub/worker... --filter=@birthub/testing... --filter=@birthub/auth... --filter=@birthub/db... --filter=@birthub/utils... run typecheck


[agent-ci] >>> /root/.nvm/versions/node/v22.21.1/bin/node /root/.cache/node/corepack/v1/pnpm/9.1.0/bin/pnpm.cjs -r --if-present --filter=@birthub/web... --filter=@birthub/api... --filter=@birthub/worker... --filter=@birthub/testing... --filter=@birthub/auth... --filter=@birthub/db... --filter=@birthub/utils... run typecheck
.                                        |  WARN  Unsupported engine: wanted: {"node":">=24 <25"} (current: {"node":"v22.21.1","pnpm":"9.1.0"})
Scope: 12 of 36 workspace projects
packages/config typecheck$ tsc -p tsconfig.json --noEmit
packages/logger typecheck$ tsc -p tsconfig.json --noEmit
packages/workflows-core typecheck$ tsc -p tsconfig.json --noEmit
packages/database typecheck$ tsc -p tsconfig.json --noEmit
packages/logger typecheck: Done
packages/auth typecheck$ tsc --noEmit
packages/config typecheck: Done
packages/utils typecheck$ tsc --noEmit
packages/workflows-core typecheck: Done
packages/auth typecheck: src/__tests__/auth.test.ts(3,35): error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.
packages/auth typecheck: Failed
/workspace/PROJETO-FINAL-BIRTHUB-360-INNOVATION/packages/auth:
 ERR_PNPM_RECURSIVE_RUN_FIRST_FAIL  @birthub/auth@0.0.0 typecheck: `tsc --noEmit`
Exit status 2
file:///workspace/PROJETO-FINAL-BIRTHUB-360-INNOVATION/scripts/ci/shared.mjs:220
    throw new Error(`Command failed: ${[command, ...args].join(" ")}`);
          ^

Error: Command failed: /root/.nvm/versions/node/v22.21.1/bin/node /root/.cache/node/corepack/v1/pnpm/9.1.0/bin/pnpm.cjs -r --if-present --filter=@birthub/web... --filter=@birthub/api... --filter=@birthub/worker... --filter=@birthub/testing... --filter=@birthub/auth... --filter=@birthub/db... --filter=@birthub/utils... run typecheck
    at run (file:///workspace/PROJETO-FINAL-BIRTHUB-360-INNOVATION/scripts/ci/shared.mjs:220:11)
    at runPnpm (file:///workspace/PROJETO-FINAL-BIRTHUB-360-INNOVATION/scripts/ci/shared.mjs:238:10)
    at file:///workspace/PROJETO-FINAL-BIRTHUB-360-INNOVATION/scripts/ci/run-pnpm.mjs:10:1
    at ModuleJob.run (node:internal/modules/esm/module_job:343:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.21.1
 ELIFECYCLE  Command failed with exit code 1.
